--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,3 +51,8 @@ button {
     background: rgb(44, 209, 88);
     color: black;
 }
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
