--- a/src/styles/Child.css
+++ b/src/styles/Child.css
@@ -10,9 +10,18 @@
     border-radius: 5px;
     border: 2px white ridge;
     width: 100%;
+    align-items: center;
+    display: block
 }
 
 .subheading{
     color: white;
     text-align: center;
+}
+
+#children-wrapper{
+    display: flex;
+    /* border: 2px solid red; */
+    align-items: center;
+    justify-content: center;
 }
