--- a/src/styles/Child.css
+++ b/src/styles/Child.css
@@ -4,11 +4,16 @@
     margin: 20px;
     border: 1px white dotted;
     border-radius: 5px;
+    cursor: pointer;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-size: 36px;
 }
 
 #master{
     border-radius: 5px;
-    border: 2px white ridge;
+    /* border: 2px white ridge; */
     width: 100%;
     align-items: center;
     display: block
